--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "gulpconfig",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,5 +24,14 @@
   },
   "dependencies": {
     "@babel/core": "^7.4.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BurdalskiBartosz/Weekly-WebDev-Challenge-2.git"
+  },
+  "bugs": {
+    "url": "https://github.com/BurdalskiBartosz/Weekly-WebDev-Challenge-2/issues"
+  },
+  "homepage": "https://github.com/BurdalskiBartosz/Weekly-WebDev-Challenge-2#readme",
+  "description": ""
 }
